log/build_2026-04-11_21-23-43/warehouse_robot/stdout_stderr.log
running egg_info
writing ../../build/warehouse_robot/warehouse_robot.egg-info/PKG-INFO
writing dependency_links to ../../build/warehouse_robot/warehouse_robot.egg-info/dependency_links.txt
writing entry points to ../../build/warehouse_robot/warehouse_robot.egg-info/entry_points.txt
writing requirements to ../../build/warehouse_robot/warehouse_robot.egg-info/requires.txt
writing top-level names to ../../build/warehouse_robot/warehouse_robot.egg-info/top_level.txt
reading manifest file '../../build/warehouse_robot/warehouse_robot.egg-info/SOURCES.txt'
writing manifest file '../../build/warehouse_robot/warehouse_robot.egg-info/SOURCES.txt'
running build
running build_py
copying warehouse_robot/swarm_controller_node.py -> /home/ayu/warehouse_robot_ws/build/warehouse_robot/build/lib/warehouse_robot
running install
running install_lib
copying /home/ayu/warehouse_robot_ws/build/warehouse_robot/build/lib/warehouse_robot/swarm_controller_node.py -> /home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot
byte-compiling /home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot/swarm_controller_node.py to swarm_controller_node.cpython-310.pyc
running install_data
  File "/home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot/swarm_controller_node.py", line 1
    ```python
    ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot-0.1.0-py3.10.egg-info' (and everything under it)
Copying ../../build/warehouse_robot/warehouse_robot.egg-info to /home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot-0.1.0-py3.10.egg-info
running install_scripts
Installing obstacle_avoidance_node script to /home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/warehouse_robot
Installing swarm_controller_node script to /home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/warehouse_robot
writing list of installed files to '/home/ayu/warehouse_robot_ws/build/warehouse_robot/install.log'
